--- a/main.html
+++ b/main.html
@@ -7,10 +7,17 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <p>First paragraph</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vitae iaculis ipsum. Aenean tempor leo lorem, ac pharetra lectus laoreet.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vitae iaculis ipsum. Aenean tempor leo lorem, ac pharetra lectus laoreet.</p>
+	<ul>
+		<li>First Item</li>
+		<li>Second Item</li>
+		<li>Third Item</li>
+		<li>Fourth Item</li>
+		<li>Fifth Item</li>
+	</ul>
+	<script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
