--- a/main.html
+++ b/main.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
+	<div>
     <p>First paragraph</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vitae iaculis ipsum. Aenean tempor leo lorem, ac pharetra lectus laoreet.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vitae iaculis ipsum. Aenean tempor leo lorem, ac pharetra lectus laoreet.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vitae iaculis ipsum. Aenean tempor leo lorem, ac pharetra lectus laoreet.</p>
+	</div>
 	<ul>
 		<li>First Item</li>
 		<li>Second Item</li>
@@ -18,6 +20,7 @@
 		<li>Fourth Item</li>
 		<li>Fifth Item</li>
 	</ul>
+	
 	<script type="text/javascript" src="./script.js"></script>
 </body>
 
